--- a/services/ptchatbot.service.example
+++ b/services/ptchatbot.service.example
@@ -9,4 +9,4 @@ User=root
 Group=root
 Environment=BUNDLE_GEMFILE=/home/pi/PTChatBot/Gemfile SLACK_API_TOKEN=your-token-here
 [Install]
-WantedBy=multi-user
+WantedBy=multi-user.target
