--- a/services/ptchatlogger.service.example
+++ b/services/ptchatlogger.service.example
@@ -9,4 +9,4 @@ User=root
 Group=root
 Environment=BUNDLE_GEMFILE=/home/pi/PTChatBot/Gemfile
 [Install]
-WantedBy=multi-user
+WantedBy=multi-user.target
